[package]
name = "rustic_qurry"
version = "0.1.0"
edition = "2021"


[dependencies]
scraper = "0.16.0" # for parsing html
url = "2.4.0" # parsing urls 
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.99" # creating and parsing json 
serde = "1.0.188" # for mongodb
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
